@@ -1,7 +1,8 @@
 == Documentation plugin by itthinx - changelog.txt ==
 
 = 1.4.0 =
-* 
+* WordPress 4.7.2 compatibility tested.
+* Improved handling of number of documents shown for Documents widget.
 
 = 1.3.6 =
 * Fixed an issue where providing a widget title would be erroneously used to filter documents shown.
